discussion/kv_engine/186499/186499_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55510: Incorrect time granularity for history callbacks

magma callback uses seconds, whilst CAS/HLC are nanoseconds.

Change-Id: I6122c20e3d0dfefcfc28240264703af8a9291dd7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-10 09:36:28.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-10 09:36:40.000000000
Message: 
Patch Set 2: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337298/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-10 10:02:06.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1074/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:124:10: error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
    std::chrono::seconds getHistoryTimeStamp() const {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:125:30: error: expected namespace name [clang-diagnostic-error]
        using namespace std::chrono;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:126:30: error: use of undeclared identifier "seconds" [clang-diagnostic-error]
        return duration_cast<seconds>(nanoseconds(getCas()));
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1074/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:124:10:
error: no member named "chrono" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1074/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1043/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:124:10:
error: no member named "chrono" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1043/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1411/ : FAILURE

Failure of GoogleTest "ExecutorPoolTest/0.Wake":

<pre>
[ RUN      ] ExecutorPoolTest/0.Wake
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.Wake (2 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.WakeMultiple
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.WakeMultiple (2 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.WakeWithoutSchedule
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.WakeWithoutSchedule (2 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.WakeUpdatesWaketime
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.WakeUpdatesWaketime (2 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.Snooze
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.Snooze (2 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.SnoozeThenWake
[2023-02-10T09:58:37.792Z] [       OK ] ExecutorPoolTest/0.SnoozeThenWake (23 ms)
[2023-02-10T09:58:37.792Z] [ RUN      ] ExecutorPoolTest/0.WakeSetsTaskRunning
[2023-02-10T09:58:37.792Z] ../kv_engine/engines/ep/tests/module_tests/executorpool_test.cc:551: Failure
[2023-02-10T09:58:37.792Z] Expected equality of these values:
[2023-02-10T09:58:37.792Z]   task_state_t::TASK_RUNNING
[2023-02-10T09:58:37.792Z]     Which is: RUNNING
[2023-02-10T09:58:37.792Z]   task->getState()
[2023-02-10T09:58:37.792Z]     Which is: DEAD
[2023-02-10T09:58:37.792Z] [  FAILED  ] ExecutorPoolTest/0.WakeSetsTaskRunning, where TypeParam = TestExecutorPool (2 ms)
ExecutorPoolTest/0.Wake
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1411/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1067/ : FAILURE

Compile error at [2023-02-10T09:39:58.104Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/kv_magma_common/magma-kvstore_metadata.h:124:10:
error: no member named "chrono" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1067/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1295/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22601/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1096/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1099/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1099/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1091/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1091/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
